
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int close (scalar_t__) ;
 int errno ;
 scalar_t__ fd ;
 int leak () ;
 scalar_t__ open (char*,int ) ;
 int printf (char*,int,char*) ;
 char* strerror (int) ;

int main(int argc, char **argv)
{
 fd = open("/dev/snd/timer", O_RDWR);

 if (fd < 0) {
  printf("open error : %d, %s\n", errno, strerror(errno));
  return -1;
 }

 leak();
 close(fd);
 return 0;
}
